css changes in pavan

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -625,11 +625,12 @@
 
                                           <li style="margin-left:20px;"><a class="child 2" href="#Mouse"><span class="numbers">3.4.4.15</span> <span style="margin-left:25px;">Mouse Actions</span></a>
                                           <ul>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#Stage"><span class="numbers">3.4.4.15.1</span><span style="margin-left:35px;">Stage</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#Click"><span class="numbers">3.4.4.15.2</span> <span style="margin-left:35px;">Click</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#RightClick"><span class="numbers">3.4.4.15.3</span> <span style="margin-left:35px;">Right Click</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#DoubleClick"><span class="numbers">3.4.4.15.4</span> <span style="margin-left:35px;">Double Click</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#Hover"><span class="numbers">3.4.4.15.5</span> <span style="margin-left:35px;">Hover</span></a></li>
+
+                                          <li style="margin-left:20px;"><a class="child 2" href="#Click"><span class="numbers">3.4.4.15.1</span> <span style="margin-left:35px;">Click</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#RightClick"><span class="numbers">3.4.4.15.2</span> <span style="margin-left:35px;">Right Click</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#DoubleClick"><span class="numbers">3.4.4.15.3</span> <span style="margin-left:35px;">Double Click</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#Hover"><span class="numbers">3.4.4.15.4</span> <span style="margin-left:35px;">Hover</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#Select"><span class="numbers">3.4.4.15.5</span><span style="margin-left:35px;">Select</span></a></li>
                                           </ul></li>
 
                                           <li style="margin-left:20px;"><a class="child 2" href="#ConditionalActions"><span class="numbers">3.4.4.16</span> <span style="margin-left:25px;">Conditional Actions</span></a>
@@ -1439,7 +1440,7 @@
                         </div>
 
                         <div id="RightClick"  class="page-section">
-                          <h5 class="purple">3.4.4.15.3 Right Click</h5>
+                          <h5 class="purple">3.4.4.15.2 Right Click</h5>
                           <p>Properties (The Right Click Action has three different types of Selectors.)</p>
                             <li><span class="numbers">1.</span><strong>Html Selector:</strong>HTML selector is nothing but the element X-Path.</li>
                             <p>Image Selector Image selector is nothing but the Image as an indicator</p>
@@ -1447,7 +1448,7 @@
                         </div>
 
                         <div id="DoubleClick"  class="page-section">
-                          <h5 class="purple">3.4.4.15.4 Double Click</h5>
+                          <h5 class="purple">3.4.4.15.3 Double Click</h5>
                           <p>Drag Double click action into the flow.</p>
                           <p>Specifies the kind of click action and it is used to open direct applications like SAP & Outlook etc</p>
                           <h6>Properties</h6>
@@ -1457,7 +1458,7 @@
                         </div>
 
                         <div id="Hover"  class="page-section">
-                          <h5 class="purple">3.4.4.15.5 Hover</h5>
+                          <h5 class="purple">3.4.4.15.4 Hover</h5>
                           <p>Drag the Hover action into the flow. It can place the mouse cursor at a particular place wherever selected.</p>
                            <h6>Properties</h6>
                             <li><span class="numbers">1.</span><strong>Html Selector:</strong>HTML selector is nothing but the element XPath.</li>
@@ -1466,7 +1467,7 @@
                         </div>
 
                         <div id="Select"  class="page-section">
-                          <h5 class="purple">3.4.4.15.6 Select</h5>
+                          <h5 class="purple">3.4.4.15.5 Select</h5>
                           <p>Drag the SELECT option into the flow.</p>
                            <p>The SELECT option has only XPath of the selected value and option value (here option will be a variable also).</p>
                            <p>Select Variable: Create one list variable and select that variable from the drop-down. Here only list variable is allowed to select from the drop-down. </p>
