--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -635,9 +635,7 @@
 
                                           <li style="margin-left:20px;"><a class="child 2" href="#ConditionalActions"><span class="numbers">3.4.4.16</span> <span style="margin-left:25px;">Conditional Actions</span></a>
                                           <ul>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#If"><span class="numbers">3.4.4.16.1</span> <span style="margin-left:35px;">If</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#If"><span class="numbers">3.4.4.16.2</span> <span style="margin-left:35px;">IfElse</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#If"><span class="numbers">3.4.4.16.3</span> <span style="margin-left:35px;">Elseif</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#If"><span class="numbers">3.4.4.16.1</span> <span style="margin-left:35px;">If,IfElse,Elseif</span></a></li>
                                           </ul></li>
 
                                           <li style="margin-left:20px;"><a class="child 2" href="#ExceptionHandling"><span class="numbers">3.4.4.17</span> <span style="margin-left:25px;">Exception Handling</span></a></li>
