pavan doc changes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -623,7 +623,7 @@
                                           <li style="margin-left:20px;"><a class="child 2" href="#ActiveWindow"><span class="numbers">3.4.4.13</span> <span style="margin-left:25px;">Active Window</span></a></li>
                                           <li style="margin-left:20px;"><a class="child 2" href="#Module"><span class="numbers">3.4.4.14</span> <span style="margin-left:25px;">Module</span></a>
                                            <ul>
-                                            <li style="margin-left:20px;"><a class="child 2" href="#AddExternalModule"><span class="numbers">3.4.4.14.1</span> <span style="margin-left:25px;">Add External Module</span></a>
+                                            <li style="margin-left:20px;"><a class="child 2" href="#AddExternalModule"><span class="numbers">3.4.4.14.1</span> <span style="margin-left:35px;">Add External Module</span></a>
                                            </ul>
                                           </li>
 
@@ -734,7 +734,7 @@
                                 </ul>
                             </li>
                             <li>
-                                <a href="EnterpriseManagerconsole " class="heading"><span class="numbers">4.</span> Enterprise Manager console </a>
+                                <a href="#EnterpriseManagerconsole " class="heading"><span class="numbers">4.</span> Enterprise Manager console </a>
                                  <ul class="collapse list-unstyled collapse-3">
                                     <li><a class="child 3" href="#Registerwith"><span class="numbers">4.1</span> Register with eManager console</a></li>
                                     <li><a class="child 3" href="#Login"><span class="numbers">4.2</span>Login</a></li>
@@ -749,9 +749,9 @@
                                 </ul>
                             </li>
                             <li>
-                                <a href="Worker" class="heading"><span class="numbers">5.</span> Worker </a>
+                                <a href="#Worker" class="heading"><span class="numbers">5.</span> Worker </a>
                                 <ul class="collapse list-unstyled collapse-4">
-                                    <li><a class="child  4" href="#loadBalance"><span class="numbers">5.1</span>RunTime Installation Steps</a>
+                                    <li><a class="child  4" href="#RunTimeInstallation"><span class="numbers">5.1</span>RunTime Installation Steps</a>
                                          <ul>
                                            <li><a class="child  4" href="#Software"><span class="numbers">5.1.1</span>Software Requirements</a>
                                            <li><a class="child  4" href="#Hardware"><span class="numbers">5.1.2</span>Hardware Requirements</a>
@@ -781,6 +781,7 @@
                         </ul>
                       </div>
                     </div>
+                  </div>
                       <div class="doc-data col-md-8 col-sm-8">
                         <div id="About"  class="page-section">
                                 <h4 class="purple">1.</span> About Techforce.ai RPA</h4>
@@ -811,7 +812,7 @@
                             </div>
 
                          <div id="download3"  class="page-section">
-                             <h4 class="purple"><span class="numbers">3.</span>Techforce.ai Studio Guide</h4>
+                             <h3><span class="numbers">3.</span>Techforce.ai Studio Guide</h3>
                           </div>
 
                           <div id="Installation"  class="page-section">
@@ -819,8 +820,8 @@
                            </div>
 
                           <div id="SoftwareRequirements"  class="page-section">
-                              <h4 class="purple"><span class="numbers">3.1.1</span> Software Requirements</h4>
-                            <h4>OS Compatibility:</h4>
+                              <h4 class="green"><span class="numbers">3.1.1</span> Software Requirements</h4>
+                            <h5>OS Compatibility:</h5>
 
                             <div class="table-responsive">
                               <table class="table">
@@ -841,7 +842,7 @@
                            </div>
 
                            <div id="HardwareRequirements"  class="page-section">
-                               <h4 class="purple"><span class="numbers">3.1.2</span> Hardware Requirements</h4>
+                               <h4 class="skyblue"><span class="numbers">3.1.2</span> Hardware Requirements</h4>
                              <ol>
                              <li><span class="numbers">1.</span><strong>Processor:</strong>Intel Core i5 2.6GHz </li>
                              <li><span class="numbers">2.</span><strong>RAM:</strong>8GB</li>
@@ -876,7 +877,7 @@
 
                           </div>
                           <div id="InstallingTechforceOCR"  class="page-section">
-                              <h4 class="purple"><span class="numbers">3.1.4</span>  Installing Techforce OCR</h4>
+                              <h4 class="orange"><span class="numbers">3.1.4</span>  Installing Techforce OCR</h4>
                             <p>Techforce OCR needs 164MB of hard disk space for installation.</p>
                             <ol>
                             <li><span class="numbers">1.</span>In the first screen of Techforce OCR installation, select preferred language, and click “OK” which will start the installation of Techforce OCR.</li>
@@ -903,7 +904,7 @@
                          </div>
 
                          <div id="Un-installInstructions"  class="page-section">
-                             <h4 class="purple"><span class="numbers">3.1.5</span>  Un-install Instructions</h4>
+                             <h4 class="red"><span class="numbers">3.1.5</span>  Un-install Instructions</h4>
                            <p>To uninstall the techforce.ai studio</p>
                            <p>Go to the Control panel and click on Uninstall a program.</p>
                            <img src="{{ '/assets/images/doc-img12.png' | relative_url }}" alt="image" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
@@ -927,7 +928,7 @@
                          </div>
 
                          <div id="Building"  class="page-section">
-                             <h4 class="green">3.2 Building a basic bot</h4>
+                             <h4 class="amethyst">3.2 Building a basic bot</h4>
                           </div>
 
                            <div id="Menu"  class="page-section">
@@ -954,26 +955,26 @@
                             <p><span class="numbers">Figure 5: </span> Studio New</p>
                           </div>
                           <div id="Open"  class="page-section">
-                            <h4 class="purple">3.3.2 Open</h4>
+                            <h4 class="pink">3.3.2 Open</h4>
                             <p>Used to open the existing file. Open a project the user worked on recently. By default, projects are created in C:\Users\\Documents\Techforce-IDE.The Open project dialog searches for project. Json files.</p>
                             <img src="{{ '/assets/images/doc-img20.png' | relative_url }}" alt="image" style="width:100px;margin-top:10px;margin-left:20px;margin-bottom:10px;">
                             <p><span class="numbers">Figure 6: </span>  Open</p>
                           </div>
                           <div id="Save"  class="page-section">
-                            <h4 class="purple">3.3.3 Save</h4>
+                            <h4 class="orange">3.3.3 Save</h4>
                             <p>Used to save the created script or Modified Script. It is used to save an RPA task with a name. Shortcut is Ctrl+S.</p>
                             <img src="{{ '/assets/images/doc-img21.png' | relative_url }}" alt="image" style="width:100px;margin-top:10px;margin-left:20px;margin-bottom:10px;">
                             <p><span class="numbers">Figure 7: </span>  Save</p>
                           </div>
                           <div id="Record"  class="page-section">
-                            <h4 class="purple">3.3.4 Record</h4>
+                            <h4 class="gray">3.3.4 Record</h4>
                             <p>Used to Record the WEB operations, simply called a Web-Recorder to automate the browser functionalities.</p>
                             <p>Techforce RPA Web Automation uses a built-in recorder that can read and enact web-based activities. It identifies web elements by their attributes and accurately manipulates them while keeping up with website changes.</p>
                             <img src="{{ '/assets/images/doc-img22.png' | relative_url }}" alt="image" style="width:100px;margin-top:10px;margin-left:20px;margin-bottom:10px;">
                             <p><span class="numbers">Figure 8: </span> Record</p>
                           </div>
                           <div id="Clear"  class="page-section">
-                            <h4 class="purple">3.3.5 Clear</h4>
+                            <h4 class="violet">3.3.5 Clear</h4>
                             <p>Used to close the opened scripts. That means to clear any task (which the user may want to clear or close).</p>
                             <img src="{{ '/assets/images/doc-img23.png' | relative_url }}" alt="image" style="width:100px;margin-top:10px;margin-left:20px;margin-bottom:10px;">
                             <p><span class="numbers">Figure 9: </span>  clear</p>
@@ -989,7 +990,7 @@
                           </ol>
                           </div>
                           <div id="Settings"  class="page-section">
-                            <h4 class="purple">3.3.7 Settings</h4>
+                            <h4 class="green">3.3.7 Settings</h4>
                             <p>Used to set the global wait time of the flow and basic Chrome dimensions.</p>
                             <img src="{{ '/assets/images/doc-img26.png' | relative_url }}" alt="image" style="width:100px;margin-top:10px;margin-left:20px;margin-bottom:10px;">
                             <p><span class="numbers">Figure 12: </span> Settings</p>
@@ -998,7 +999,7 @@
                             <p><span class="numbers">Figure 13: </span>  Global settings</p>
                           </div>
                           <div id="Stop"  class="page-section">
-                            <h4 class="purple">3.3.8 Stop</h4>
+                            <h4 class="skyblue">3.3.8 Stop</h4>
                             <p>Used to stop the execution of flow while it is running.</p>
                             <img src="{{ '/assets/images/doc-img28.png' | relative_url }}" alt="image" style="width:100px;margin-top:10px;margin-left:20px;margin-bottom:10px;">
                             <p><span class="numbers">Figure 14: </span>  Stop</p>
@@ -1447,7 +1448,7 @@
                         </div>
 
                         <div id="Module"  class="page-section">
-                          <h5 class="purple">3.4.4.14 Module:</h5>
+                          <h5 class="purple">3.4.4.14 Module</h5>
                         </div>
                         <div id="AddExternalModule"  class="page-section">
                           <h5 class="purple">3.4.4.14.1 Add External Module:</h5>
@@ -1991,7 +1992,7 @@
               </div>
 
               <div id="MailIntegration"  class="page-section">
-                <h5 class="purple">3.4.6 Mail Integration</h5>
+                <h4 class="purple">3.4.6 Mail Integration</h5>
                 <p>The Mail Integration Activity contains all the mail activities used for creating automation projects. These activities enable robots to:</p>
                 <p>Configuring bot with corresponding Outlook account.</p>
                 <p>Sending email from Outlook account and other mail providers.</p>
@@ -2000,7 +2001,7 @@
               </div>
 
               <div id="Outlook"  class="page-section">
-                <h4 class="purple">3.4.6.1 Outlook2016</h4>
+                <h5>3.4.6.1 Outlook2016</h5>
                 <p>The outlook2016 actions are used to read and send the mails from the Outlook application Read mail</p>
                 <h6>Read Mail</h6>
                  <p>Reads emails from configured outlook account.</p>
@@ -2020,7 +2021,7 @@
                <p>We can send variable instead of direct text in to, subject, body </p>
              </div>
              <div id="IMAP"  class="page-section">
-               <h4 class="purple">3.4.6.2 IMAP</h4>
+               <h5>3.4.6.2 IMAP</5>
                <p>IMAP (Internet Message Access Protocol) is a standard email protocol that stores email messages on a mail server but allows the end-user to view and manipulate the messages as though they were stored locally on the end user's computing device(s). This allows users to organize messages into folders, have multiple client applications know which messages have been read, flag messages for urgency or follow-up and save draft messages on the server.</p>
                <h6>Read Mail</h6>
                <p>Reads email from the corresponding GMAIL account.</p>
@@ -2045,7 +2046,7 @@
                </div>
 
                <div id="POP3"  class="page-section">
-                 <h4 class="purple">3.4.6.3 POP3</h4>
+                 <h5>3.4.6.3 POP3</h5>
                   <p>POP3 (Post Office Protocol 3) is the most recent version of a standard protocol for receiving e-mail. POP3 is a client/server protocol in which e-mail is received and held for the user by the Internet server. Periodically, the user (or user’s client e-mail receiver) checks the mail-box on the server and downloads any mail, probably using POP3.</p>
                   <h6>Read Mail</h6>
                   <p>Reads email from the corresponding GMAIL account.</p>
@@ -2066,7 +2067,7 @@
                       </div>
 
                       <div id="SMTP"  class="page-section">
-                        <h4 class="purple">3.4.6.4 SMTP-Send mail</h4>
+                        <h5>3.4.6.4 SMTP-Send mail</h5>
                           <p>Send email from configured Outlook account.</p>
                           <h6>Properties Login</h6>
                           <p><span class="numbers"><strong>To: </strong>The receiver’s mail id.</p>
@@ -2076,7 +2077,7 @@
                      </div>
 
                             <div id="SaveAttachments"  class="page-section">
-                              <h4 class="purple">3.4.6.5 Save Attachments</h4>
+                              <h5>3.4.6.5 Save Attachments</h5>
                             <p>Saves attachments in the local path, which is downloaded from corresponding mail account.</p>
                             <h6>Properties Login</h6>
                             <p><span class="numbers"><strong>File Path:  </strong>The corresponding folder path to save the attachment.</p>
@@ -2085,12 +2086,12 @@
                           </div>
 
                      <div id="DatabaseActions"  class="page-section">
-                       <h5 class="purple">3.4.7 Database Actions</h5>
+                       <h4 class="purple">3.4.7 Database Actions</h4>
                        <p>To automate the process of database actions related to MySQL and PostgreSQL.</p>
                      </div>
 
                        <div id="Connection"  class="page-section">
-                         <h5 class="purple">3.4.7.1 Connection</h5>
+                         <h5>3.4.7.1 Connection</h5>
                          <p>The Connection action is used to connect to the MySQL or PostgreSQL.</p>
                        <h6>Properties</h6>
                        <p><span class="numbers"><strong>Please Select Database Type:</strong>Select either MySQL or PostgreSQL</p>
@@ -2112,26 +2113,11 @@
                      </div>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
                           <div id="EnterpriseManagerconsole"  class="page-section">
                               <h3><span class="numbers">4.</span> Enterprise Manager console</h3>
                           </div>
 
-                            <div id="Register"  class="page-section">
+                            <div id="Registerwith"  class="page-section">
                               <h4 class="skyBlue">4.1 Register with eManager console</h4>
                               <h5>Worker creation:</h5>
                               <p>This is the worker screen before a worker is created in the worker management.</p>
@@ -2282,9 +2268,10 @@
 
                           <div id="Worker"  class="page-section">
                             <h3><span class="numbers">5.</span> Worker</h3>
+                          </div>
 
-                              <h4 class="green">5.1. Runtime Installation</h4>
-
+                           <div id="RuntimeInstallation"  class="page-section">
+                              <h4 class="green">5.1. Runtime Installation Steps</h4>
                          </div>
 
                          <div id="Software"  class="page-section">
